# bsuir-CW-1

./: .clang-uml  .clangd  .gitignore  README.adoc  default.nix  meson.build  meson_options.txt  practice.tex  report.tex  shell.nix
doc/: activity.eps  activity.plantuml  classes.plantuml  inventory-template.docx  inventory.docx  lib.bib  practice.bib  practice.tex  report.tex  report1.tex  report2.tex  report3.tex  report4.tex  report5.tex  usecase.plantuml
doc/includes/: activity.plantuml  inventory.docx  task.docx  usecases.plantuml
doc/templates/: inventory.docx  task.docx
po/: LINGUAS  POTFILES  be.po  cw1.pot  meson.build  ru.po
src/: application.cc  application.hh  cli.cc  cw1.hh  gresources.xml  hashformatter.cc  hashformatter.hh  hashprocessor.cc  hashprocessor.hh  image.cc  image.hh  list.cc  list.hh  main.cc  main.hh  meson.build  processor.hh  rvhash.cc  rvhash.hh
src/assets/: meson.build  template.desktop
src/tests/: hashers.cc  main.cc  meson.build
src/views/: about.ui  application.ui  popover.ui  preferences.ui  project.cmb  ui.cmb
